log
Fri 21 Apr 2023 01:09:22 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
11b9df2
Fri 21 Apr 2023 01:24:47 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:5: error: expected expression before ‘}’ token
   96 |     }
      |     ^
treemap.c:96:5: error: expected expression before ‘}’ token
Compilation failed
f15902b
Fri 21 Apr 2023 01:31:05 PM UTC: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:59:13: error: expected ‘;’ before ‘}’ token
   59 |     return x
      |             ^
      |             ;
   60 |   }else{
      |   ~          
Compilation failed
cd977d1
